--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,5 @@ python:
   - 3.8
   - 3.9
 cache: pip
-install:
-  - pip install coverage
 script:
-  - coverage run -m unittest discover
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - python3 -m unittest discover
